--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     }
     
-    /* Skor ve süre için güncellenmiş stil */
+    /* Skor ve süre için küçük stil */
     #score, #timer {
-      font-size: 5vw;
+      font-size: 4vw; /* Küçük yazı boyutu */
       color: rgba(255, 255, 255, 0.8); /* Beyaz, şeffaf */
       text-align: center;
       z-index: 5;
@@ -52,11 +52,11 @@
     }
 
     #score {
-      top: 18%; /* Skor biraz daha üstte */
+      top: 12%; /* Skor biraz daha üstte */
     }
 
     #timer {
-      top: 25%; /* Süre biraz daha altta */
+      top: 18%; /* Süre biraz daha altta */
     }
     
     .controls {
