--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     .game-info {
       position: absolute;
-      bottom: 12%; /* Alt kısmı biraz daha üstte */
+      bottom: 15%; /* Skor ve süre kısmı biraz daha üstte */
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -235,8 +235,8 @@
       const totalWidth = screenWidth * 0.2; // İki karakterin toplam genişliği
       characters[0].x = screenWidth / 2 - totalWidth / 2;
       characters[1].x = characters[0].x + characters[0].width;
-      characters[0].y = screenHeight * 0.7;  // Karakteri biraz daha aşağıya yerleştir
-      characters[1].y = screenHeight * 0.7;  // Karakteri biraz daha aşağıya yerleştir
+      characters[0].y = screenHeight * 0.55;  // Karakteri biraz daha aşağıya yerleştir
+      characters[1].y = screenHeight * 0.55;  // Karakteri biraz daha aşağıya yerleştir
       
       // UI'ı güncelle
       timerEl.textContent = gameTime;
@@ -277,7 +277,7 @@
         const totalWidth = characters[0].width + characters[1].width;
         characters[0].x = Math.max(0, Math.min(screenWidth - totalWidth, characters[0].x));
         characters[1].x = characters[0].x + characters[0].width;
-        characters[0].y = screenHeight * 0.7 - characters[0].height / 2;
+        characters[0].y = screenHeight * 0.55 - characters[0].height / 2;
         characters[1].y = characters[0].y;
       }
     }
