--- a/index.html
+++ b/index.html
@@ -41,20 +41,29 @@
     }
     
     .game-info {
-      position: absolute;
-      top: 15%;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      gap: 20px;
-      background-color: rgba(0,0,0,0.3);
-      padding: 8px 16px;
-      border-radius: 20px;
-      color: white;
-      font-size: 3.5vw;
-      text-shadow: 1px 1px 2px black;
-      white-space: nowrap;
+    position: absolute;
+    top: calc(60% + 50px); /* Karakterlerin altında (0.6 * screenHeight + karakter yüksekliği) */
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 15px; /* Daha az boşluk */
+    background-color: rgba(0,0,0,0.3);
+    padding: 6px 12px; /* Daha küçük padding */
+    border-radius: 15px;
+    color: white;
+    font-size: 14px; /* Sabit piksel boyutu */
+    text-shadow: 1px 1px 2px black;
+    white-space: nowrap;
+  }
+  
+  /* Mobil cihazlar için ek ayarlar */
+  @media (max-height: 700px) {
+    .game-info {
+      font-size: 12px;
+      padding: 4px 8px;
+      top: calc(60% + 40px); /* Daha küçük ekranlar için ayar */
     }
+  }
     
     .controls {
       position: absolute;
