--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     
     .game-info {
     position: absolute;
+    bottom: 20%; /* Daha merkeze yakın */
     top: calc(60% + 50px); /* Karakterlerin altında (0.6 * screenHeight + karakter yüksekliği) */
     left: 50%;
     transform: translateX(-50%);
